--- a/app/docker-compose.build.yml
+++ b/app/docker-compose.build.yml
@@ -1,6 +1,11 @@
-version: '3.1'
+version: '3.3'
 
 services:
+
+  db:
+    build:
+      context: ../docker/db
+      dockerfile: ./Dockerfile
 
   web:
     build:
