Initial Kube support

--- a/docker/save-handler/Dockerfile
+++ b/docker/save-handler/Dockerfile
@@ -1,26 +1,25 @@
 # escape=`
-
-FROM sixeyed/msbuild:netfx-4.5.2-10.0.14393.1198 AS builder
+FROM microsoft/dotnet-framework-build:4.7.1-windowsservercore-ltsc2016 AS builder
 
 WORKDIR C:\src\SignUp.MessageHandlers.SaveProspect
 COPY .\src\SignUp\SignUp.MessageHandlers.SaveProspect\packages.config .
 RUN nuget restore packages.config -PackagesDirectory ..\packages
 
 COPY src\SignUp C:\src
-RUN msbuild SignUp.MessageHandlers.SaveProspect.csproj /p:OutputPath=c:\out\save-prospect\SaveProspectHandler
+RUN msbuild SignUp.MessageHandlers.SaveProspect.csproj /p:OutputPath=c:\out\
 
 # app image
-FROM microsoft/windowsservercore:10.0.14393.1198
+FROM microsoft/dotnet-framework:4.7.1-windowsservercore-1709
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
-RUN Set-ItemProperty -path 'HKLM:\SYSTEM\CurrentControlSet\Services\Dnscache\Parameters' -Name ServerPriorityTimeLimit -Value 0 -Type DWord
-
-WORKDIR /save-prospect-handler
-CMD .\SignUp.MessageHandlers.SaveProspect.exe
-
-ENV MESSAGE_QUEUE_URL="nats://message-queue:4222" `
-    DB_CONNECTION_STRING_PATH="C:\ProgramData\Docker\secrets\signup-db.connectionstring" `
+ENV APP_ROOT="C:\\save-prospect-handler" `
+    MESSAGE_QUEUE_URL="nats://message-queue:4222" `
+    DB_CONNECTION_STRING_PATH="" `
     DB_MAX_RETRY_COUNT="5" `
     DB_MAX_DELAY_SECONDS="10"
 
-COPY --from=builder C:\out\save-prospect\SaveProspectHandler .
+WORKDIR $APP_ROOT
+COPY docker\save-handler\start.ps1 .
+CMD ["powershell", ".\\start.ps1"]
+
+COPY --from=builder C:\out .
