--- a/src/SignUp/SignUp.Web/Web.config
+++ b/src/SignUp/SignUp.Web/Web.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+
+  <connectionStrings configSource="connectionStrings.config" />
+
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.7.1" />
     <customErrors mode="Off" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime />
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -17,6 +19,7 @@
       </controls>
     </pages>
   </system.web>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -29,9 +32,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
+
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -42,4 +47,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
 </configuration>
