--- a/src/SignUp/SignUp.Web/Web.config
+++ b/src/SignUp/SignUp.Web/Web.config
@@ -1,15 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-
-  <connectionStrings configSource="connectionStrings.config" />
-
   <system.web>
-    <compilation debug="true" targetFramework="4.7.1" />
+    <compilation debug="true" targetFramework="4.5.2" />
     <customErrors mode="Off" />
-    <httpRuntime />
+    <httpRuntime targetFramework="4.5.2" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -19,7 +17,6 @@
       </controls>
     </pages>
   </system.web>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -32,11 +29,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
-
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -47,5 +42,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  
 </configuration>
